Adjustment of payment for yeshtery purposes (2)